Asset Shelf is crashed by Reload Scripts. #111694

Closed
opened 2023-08-30 13:47:34 +02:00 by Alexander Gavrilov · 1 comment

Blender Version

Broken: 4.0 main (cbc14782ff)

Short description of error

Asset Shelf crashes after Reload Scripts, because AssetShelfType is deallocated without clearing all references.

Exact steps for others to reproduce the error

  1. Add an armature.
  2. Switch to pose mode, wait for asset shelf to initialize and draw its contents.
  3. Use System -> Reload Scripts.
**Blender Version** Broken: 4.0 main (cbc14782ff7) **Short description of error** Asset Shelf crashes after Reload Scripts, because AssetShelfType is deallocated without clearing all references. **Exact steps for others to reproduce the error** 1. Add an armature. 2. Switch to pose mode, wait for asset shelf to initialize and draw its contents. 3. Use System -> Reload Scripts.
Alexander Gavrilov added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2023-08-30 13:47:35 +02:00
Julian Eisel was assigned by Alexander Gavrilov 2023-08-30 13:47:36 +02:00
Alexander Gavrilov added this to the Brush Assets & Asset Shelf project 2023-08-30 13:47:37 +02:00
Iliya Katushenock added the
Interest
Pipeline, Assets & IO
Interest
User Interface
labels 2023-08-30 13:49:49 +02:00
Member

Can confirm.

Can confirm.
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-08-30 14:02:17 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-30 16:03:29 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111694
No description provided.